# r34gif-word-converter

./: Cargo.toml  Readme.md
.github/workflows/: cli.yml
src/: main.rs
src/mappings/: mod.rs  r34.rs
