
[package]
name = "word2gif"
version = "1.0.0"
edition = "2024"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
repository = "https://github.com/TOwInOK/r34gif-word-convertor"
license = "MIT"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
phf = { version = "0.12.1", features = ["macros"] }


[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 'z'
debug = false
lto = true
codegen-units = 24
panic = 'abort'
strip = true
incremental = true
debug-assertions = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
